# icap-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-plz.yml  release.yml
deployment/: Dockerfile-build  docker-compose-build.yml  windows-build.ps1
icap-rs/: ARCHITECTURE.md  Cargo.toml  README.md  Readme.md
icap-rs/benches/: client_bench.rs  icap_benchmarks.rs  protocol_bench.rs  rps_bench.rs  server_bench.rs  tls_overhead_bench.rs
icap-rs/docs/: rfc3507.md  tls.md
icap-rs/examples/: allow_204_demo.rs  block_by_url.rs  client.rs  dynamic_istag.rs  modify_http_headers.rs  options_cache_client.rs  options_server.rs  partial_content_respmod.rs  preview_decision_server.rs  proxy_auth_client.rs  request_modifier.rs  route_by_icap_header.rs  server.rs  squid_interop_server.rs  streaming_client.rs  test_allow_204_client.rs  tls_client.rs  tls_mtls_client.rs  tls_server.rs  transfer_policy_client.rs
icap-rs/fuzz/: Cargo.toml
icap-rs/fuzz/fuzz_targets/: fuzz_chunked.rs  fuzz_encapsulated.rs  fuzz_http_embed.rs  fuzz_icap_request_raw.rs  fuzz_icap_request_structured.rs  fuzz_icap_response.rs  fuzz_icap_response_body.rs  fuzz_istag.rs  fuzz_preview_structured.rs
icap-rs/src/: client.rs  error.rs  http.rs  icap_request.rs  icap_response.rs  lib.rs  net.rs  options.rs  parser.rs  protocol.rs  request.rs  response.rs  server.rs  tls.rs
icap-rs/src/client/: builder.rs  options_cache.rs  timeouts.rs  tls.rs
icap-rs/src/client/tls/: openssl.rs  rustls.rs
icap-rs/src/parser/: http_embed.rs  icap.rs  wire.rs
icap-rs/src/protocol/: chunked.rs  encapsulated.rs  headers.rs  http_embed.rs  istag.rs
icap-rs/src/server/: builder.rs  connection.rs  errors.rs  handler.rs  no_modification.rs  options.rs  preview.rs  router.rs  timeouts.rs
icap-rs/src/tls/: client.rs  error.rs  pem.rs  server.rs
icap-rs/tests/: client_graceful_shutdown.rs  client_keep_alive.rs  client_timeout.rs  early_response.rs  max_connections.rs  preview.rs  rfc3507.rs  rfc_tests.rs  server.rs  server_graceful_shutdown.rs  streaming_response_writer.rs  tls.rs
icap-rs/tests/common/: mod.rs
interop/c-icap/: Dockerfile  README.md  c-icap.conf  compose.yaml
interop/squid/: README.md  compose.yaml  squid.conf
interop/squid/origin/: index.html
rs-icap-client/: Cargo.toml  README.md
rs-icap-client/src/: main.rs
rs-icap-server/: Cargo.toml
