[workspace]
members = [
    "icap-rs",
    "rs-icap-client",
    "rs-icap-server"
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/Eslrusgag/icap-rs"
license = "MIT"

[workspace.dependencies]
# Workspace crates
icap-rs = { path = "icap-rs" }

# Async runtime and I/O
tokio = "1.52.3"
tokio-rustls = "0.26.4"

# Protocol/data types
bytes = "1.11.1"
http = "1.4.0"
smallvec = "2.0.0-alpha.12"

# Parsing and async helpers
async-trait = "0.1.89"
memchr = "2.8.0"
pin-project-lite = "0.2.17"

# TLS
rustls = { version = "0.23.40", default-features = false }
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"

# Diagnostics and errors
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# CLI and time
chrono = "0.4.44"
clap = "4.6.1"

# Tests and benchmarks
criterion = "0.8.2"
rstest = "0.26.1"
