[workspace]
members = [
    "icap-rs",
    "rs-icap-client",
    "rs-icap-server"
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/Eslrusgag/icap-rs"
license = "MIT"
keywords = ["icap", "proxy", "async"]
categories = ["network-programming"]

[workspace.dependencies]
# Workspace crates
icap-rs = { path = "icap-rs" }

# Async runtime and I/O
tokio = "1.52.3"
tokio-rustls = "0.26.4"
tokio-util = "0.7"

# Protocol/data types
http = "1.4.1"

# Parsing and async helpers
async-trait = "0.1.89"
memchr = "2.8.1"
pin-project-lite = "0.2.17"

# TLS
rustls = { version = "0.23.40", default-features = false }
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"

# Diagnostics and errors
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# CLI and time
chrono = "0.4.45"
clap = "4.6.1"

# Tests and benchmarks
criterion = "0.8.2"
rcgen = "0.14.8"
rstest = "0.26.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
