[package]
name = "icap-rs"
version = "0.1.1"
edition = "2024"
description = "ICAP client and server crate"
repository = "https://github.com/Eslrusgag/icap-rs"
license = "MIT"

[features]
default = []

# Top-level flag to compile TLS support using Rustls.
# Pulls in tokio-rustls for async I/O, rustls core, system trust store loading,
# and PEM parsing for custom roots.
tls-rustls = [
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:rustls-pemfile",
    "rustls/ring",
]


[dependencies]
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
http = "1.4.0"
smallvec = "2.0.0-alpha.12"
memchr = "2.7.6"
pin-project-lite = "0.2"
async-trait = "0.1"
bytes = "1.11.1"


tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std"], optional = true }
rustls-native-certs = { version = "0.8.3", optional = true }
rustls-pemfile = { version = "2", optional = true }

[dev-dependencies]
rstest = "0.26.1"
criterion = { version = "0.8.2", features = ["html_reports"] }
tracing-subscriber = "0.3"


[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "tls_client"
path = "examples/tls_client.rs"

[[bench]]
name = "protocol_bench"
harness = false
