[package]
name = "icap-rs"
version = "0.2.0"
edition.workspace = true
description = "ICAP client and server crate"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

# Top-level flag to compile TLS support using Rustls.
# Pulls in tokio-rustls for async I/O, rustls core, system trust store loading,
# and PEM parsing for custom roots.
tls-rustls = [
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:rustls-pemfile",
    "rustls/ring",
]


[dependencies]
# Async runtime and I/O
tokio = { workspace = true, features = ["full"] }

# Protocol/data types
bytes = { workspace = true }
http = { workspace = true }
smallvec = { workspace = true }

# Parsing and async helpers
async-trait = { workspace = true }
memchr = { workspace = true }
pin-project-lite = { workspace = true }

# TLS
rustls = { workspace = true, features = ["std"], optional = true }
rustls-native-certs = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }

# Diagnostics and errors
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
rstest = { workspace = true }
tracing-subscriber = { workspace = true }


[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "tls_client"
path = "examples/tls_client.rs"

[[bench]]
name = "protocol_bench"
harness = false

[[bench]]
name = "rps_bench"
harness = false

[lints]
workspace = true
