[package]
name = "icap-rs"
version = "0.3.0"
edition.workspace = true
description = "ICAP client and server crate"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

# Top-level flag to compile TLS support using Rustls.
# Pulls in tokio-rustls for async I/O, rustls core, system trust store loading,
# PEM parsing, and the `ring` crypto provider as the default.
tls-rustls = [
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:rustls-pemfile",
    "rustls/ring",
]

# Additive opt-in: compile the `aws-lc-rs` crypto provider alongside `ring`.
# When this feature is enabled, the runtime installer prefers aws-lc-rs.
# Implies `tls-rustls`, so user code that gates on `feature = "tls-rustls"`
# keeps working unchanged.
tls-rustls-aws-lc-rs = ["tls-rustls", "rustls/aws-lc-rs"]


[dependencies]
# Async runtime and I/O
tokio = { workspace = true, features = ["full"] }

# Protocol/data types
bytes = { workspace = true }
http = { workspace = true }
smallvec = { workspace = true }

# Parsing and async helpers
async-trait = { workspace = true }
memchr = { workspace = true }
pin-project-lite = { workspace = true }

# TLS
rustls = { workspace = true, features = ["std"], optional = true }
rustls-native-certs = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }

# Diagnostics and errors
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
rcgen = { workspace = true }
rstest = { workspace = true }
tracing-subscriber = { workspace = true }


[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "streaming_client"
path = "examples/streaming_client.rs"

[[example]]
name = "tls_client"
path = "examples/tls_client.rs"
required-features = ["tls-rustls"]

[[example]]
name = "tls_server"
path = "examples/tls_server.rs"
required-features = ["tls-rustls"]

[[example]]
name = "tls_mtls_client"
path = "examples/tls_mtls_client.rs"
required-features = ["tls-rustls"]


[[example]]
name = "preview_decision_server"
path = "examples/preview_decision_server.rs"

[[example]]
name = "squid_interop_server"
path = "examples/squid_interop_server.rs"

[[bench]]
name = "protocol_bench"
harness = false

[[bench]]
name = "rps_bench"
harness = false

[[bench]]
name = "tls_overhead_bench"
harness = false
required-features = ["tls-rustls"]

[lints]
workspace = true
