[package]
name = "rs-icap-client"
version = "0.2.0"
edition = "2024"
description = "ICAP client on Rust"
repository = "https://github.com/Eslrusgag/icap-rs"
license = "MIT"

[features]
default = ["tls-rustls"]

tls-rustls = ["icap-rs/tls-rustls"]
#tls-openssl = ["icap-rs/tls-openssl"]
#tls-openssl-vendored = ["icap-rs/tls-openssl-vendored"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
icap-rs = { path = "../icap-rs" }
tracing = "0.1"
tracing-subscriber = "0.3"
http = "1.4.0"
chrono = "0.4.43"
