[package]
name = "rs-icap-client"
version = "0.2.0"
edition.workspace = true
description = "ICAP client on Rust"
repository.workspace = true
license.workspace = true

[features]
default = ["tls-rustls"]

tls-rustls = ["icap-rs/tls-rustls"]

[dependencies]
# Workspace crates
icap-rs = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# CLI and time
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }

# Protocol/data types
http = { workspace = true }

# Diagnostics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
